@@ -105,8 +105,8 @@ void reg_notice_func(struct userNode *user, privmsg_func_t handler);
 void unreg_privmsg_func(struct userNode *user);
 void unreg_notice_func(struct userNode *user);
 
-typedef void (*oper_func_t) (struct userNode *user);
-void reg_oper_func(oper_func_t handler);
+typedef void (*oper_func_t) (struct userNode *user, void *extra);
+void reg_oper_func(oper_func_t handler, void *extra);
 
 /* replay silliness */
 void replay_read_line(void);
